--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask
-Flask-SocketIO
-simple-websocket
-gevent
-gevent-websocket
-fastcore
+fastapi==0.89.1
+uvicorn[standard]==0.20.0
+jinja2==3.1.2
+python-multipart==0.0.5
