--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ fastapi==0.89.1
 uvicorn[standard]==0.20.0
 jinja2==3.1.2
 python-multipart==0.0.5
-fastapi_socketio==0.0.9
+python-socketio[asyncio_client]==5.7.2
 fastcore==1.5.28
