--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,7 @@
-http://IP_ADDRESS_HERE {
+www.URL_ADDRESS_HERE.com {
+   redir https://URL_ADDRESS_HERE.com{uri}
+}
+
+URL_ADDRESS_HERE.com {
    reverse_proxy localhost:8000
 }
